src/main/webapp/css/main.css
/* Copyright 2017 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

body {
  margin: 0;
  font-family: sans-serif;
  line-height: 1.6;
  font-size: 18px;
  line-height: 1.6;
  color: #444;
  background-color: #eeeeee;
}

nav {
  background-color: #283593;
}

nav a {
  color: white;
  display: inline-block;
  font-size: 24px;
  margin: 15px;
  text-decoration: none;
}

#navTitle {
  font-size: 36px;
}

#container {
  margin-left: auto;
  margin-right: auto;
  width: 800px;
}

#chat {
  background-color: white;
  height: 500px;
  overflow-y: scroll
}

.error {color:red;}

h1 {
  color: #757575;
  font-family: 'Fjalla One', sans-serif;
  font-weight: normal;
  text-transform: uppercase;
  line-height: 46px;
  font-size: 43px;
  margin: 0 0 23px 0;
  color: #757575;
}

h2 {
  font-family: 'Cantarell', sans-serif;
  font-weight: 700;
  font-size: 20px;
  line-height: 23px;
  text-transform: uppercase;
  letter-spacing: -1px;
  margin: 0 0 23px 0;
}

p {
  font-family: 'Cantarell', sans-serif;
  font-size: 17px;
  line-height: 23px;
  margin: 0 0 23px 0;
}

input {
  font-size: 18px;
}

.panel-footer{
  background-color:transparent;
  border-color: transparent;
  color: transparent;
}

.home-h1{
  color: white;
  font-size: 200px;
}

.home-h2{
  font-size: 50px;
  color: white;
}

.background-home-div{
  box-sizing:border-box;
  width: 100%;
  margin-left:auto;
  margin-right:auto;
  margin-top: 3%;
  background-image: url(images/background.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.no-padding {
  padding-left: 0;
  padding-right: 0;
}

.home-btn{
  box-sizing:border-box;
  background: white;
  border: white;
  color: #222222;
}

.home-btn:hover{
  background: lightgray;
  border: lightgray;
  color: #222222;
}

button {
  font-size: 18px;
}

